--- a/pom.xml
+++ b/pom.xml
@@ -38,13 +38,27 @@
 
     <dependency>
       <groupId>io.prometheus</groupId>
-      <artifactId>simpleclient_servlet</artifactId>
-      <version>0.0.11</version>
+      <artifactId>simpleclient</artifactId>
+      <version>0.0.16</version>
     </dependency>
+
     <dependency>
       <groupId>io.prometheus</groupId>
-      <artifactId>simpleclient_hotspot</artifactId>
-      <version>0.0.11</version>
+      <artifactId>simpleclient_common</artifactId>
+      <version>0.0.16</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient_spring_boot</artifactId>
+      <version>0.0.16</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.cthul</groupId>
+      <artifactId>cthul-matchers</artifactId>
+      <version>1.1.0</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -57,10 +71,12 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
       </plugin>
     </plugins>
   </build>
-
 </project>
